<resources>
    <string name="app_name">AndroidAPSSidekick</string>

    <!-- Preference Strings -->
    <string name="general_prefs_title">General</string>

    <string name="display_sleep">Allow Display to Sleep</string>
    <string name="display_sleep_sum_on">Display Can Sleep</string>
    <string name="display_sleep_sum_off">Display Cannot Sleep</string>

    <string name="display_dark">Dark Display</string>

    <string name="bg_units">Units</string>

    <string name="nightscout_pref_title">Pull from Nightscout</string>
    <string name="nightscout_enable">Enable</string>
    <string name="nightscout_url">URL</string>

    <string name="dexcom_pref_title">Pull from Dexcom</string>
    <string name="dexcom_summary">If Dexcom is on this phone, this app can listen to BGL readings</string>
    <string name="dexcom_enable_title">Enable BGL readings from Dexcom App</string>

</resources>